# WFChatbot

./: CMakeLists.txt  ReadMe.md
.github/workflows/: ci.yml
examples/: ExampleBase64.cc  ExampleChatbot.cc  ExampleJson.cc  ExampleLogger.cc
include/: Api.h  Platform.h
source/Agent/: Agent.cc  Agent.h
source/Base/: AutoTimer.cc  AutoTimer.h  Base64.cc  Base64.h  Json.cc  Json.h  JsonParser.c  JsonParser.h  List.h  Logger.cc  Logger.h  Timestamp.cc  Timestamp.h
source/LLM/: LLMBase.cc  LLMBase.h  LLMDashScope.cc  LLMDashScope.h  LLMDeepSeek.cc  LLMDeepSeek.h  LLMOpenAI.cc  LLMOpenAI.h  LLMSchema.h
source/Server/: Callback.cc  Callback.h  ChatbotServer.cc  ChatbotServer.h
source/Tools/: ToolAmapWeather.cc  ToolAmapWeather.h  ToolBase.cc  ToolBase.h  ToolBuildin.cc  ToolBuildin.h  ToolMCP.cc  ToolMCP.h
source/Util/: FileUtil.cc  FileUtil.h  PathUtil.cc  PathUtil.h
